--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine On
 
-RewriteRule ^$ %{REQUEST_SCHEME}://%{HTTP_HOST}%{REQUEST_URI}index [L,R=301]
+# RewriteRule ^$ %{REQUEST_SCHEME}://%{HTTP_HOST}%{REQUEST_URI}index [L,R=301]
+# RewriteRule ^index$ %{REQUEST_SCHEME}://%{HTTP_HOST}/ [L,R=301]
+
+RewriteRule ^index$ %{REQUEST_SCHEME}://%{HTTP_HOST}/ [L,R=301]
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
@@ -21,4 +24,5 @@ RewriteRule ^([^/]+)(/|$) $1.php
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule (.*) core/404.php?source=$1
+
 
